# diagrams

./: .gitignore  .pre-commit-config.yaml  config.py  pyproject.toml
diagrams/: __init__.py  attributes.py  options.py  settings.py
diagrams/alibabacloud/: __init__.py  analytics.py  application.py  communication.py  compute.py  database.py  iot.py  network.py  security.py  storage.py  web.py
diagrams/aws/: __init__.py  analytics.py  ar.py  blockchain.py  business.py  compute.py  cost.py  database.py  devtools.py  enablement.py  enduser.py  engagement.py  game.py  general.py  integration.py  iot.py  management.py  media.py  migration.py  ml.py  mobile.py  network.py  quantum.py  robotics.py  satellite.py  security.py  storage.py
diagrams/azure/: __init__.py  analytics.py  compute.py  database.py  devops.py  general.py  identity.py  integration.py  iot.py  migration.py  ml.py  mobile.py  network.py  security.py  storage.py  web.py
diagrams/base/: __init__.py
diagrams/c4/: __init__.py
diagrams/custom/: __init__.py
diagrams/digitalocean/: __init__.py  compute.py  database.py  network.py  storage.py
diagrams/elastic/: __init__.py  agent.py  beats.py  elasticsearch.py  enterprisesearch.py  observability.py  orchestration.py  saas.py  security.py
diagrams/firebase/: __init__.py  base.py  develop.py  extentions.py  grow.py  quality.py
diagrams/gcp/: __init__.py  analytics.py  api.py  compute.py  database.py  (+8 more)
scripts/: __init__.py  generate.py  resource.py
tests/: conftest.py  test_components.py  test_examples.py
website/: package-lock.json  package.json
(+125 files in other folders)
