[tool.poetry]
name = "diagrams"
version = "0.23.3"
description = "Diagram as Code"
license = "MIT"
authors = ["mingrammer <mingrammer@gmail.com>"]
readme = "README.md"
homepage = "https://diagrams.mingrammer.com"
repository = "https://github.com/mingrammer/diagrams"
include = ["resources/**/*"]

[tool.poetry.dependencies]
python = "^3.7.2"
strenum = "^0.4.9"
graphviz = "^0.20.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "<3.0.0"
pylint = "^2.15.10"
perflint = "^0.7.3"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
fail_under = 5

[tool.pytest.ini_options]
addopts = """
--verbose
--tb=short -rEf
--cov diagrams
--cov-report html:coverage
--cov-report term
"""
